fixed align-item

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ header .logo {
 
 .item {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   list-style: none;
   text-transform: uppercase;
 }
@@ -198,6 +198,10 @@ header .logo {
   height: 8px;
   background-color: rgba(47, 171, 115, 1);
   border-radius: 50%;
+}
+
+.tasks .item {
+  align-items: baseline;
 }
 
 .link.home-work {
